Recreate build file